--- a/.gitignore
+++ b/.gitignore
@@ -394,3 +394,6 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/node,react,linux,windows,firebase,phpstorm+all,webstorm+all,intellij+all,visualstudiocode
 
 
+
+
+firebase.json
