firebase Email Auth:sign-up (completed intial state)

--- a/functions/.env.exmaple
+++ b/functions/.env.exmaple
@@ -1,3 +1,12 @@
 
-FIREBASE_PROJECT_NAME=
-FIREBASE_PROJECT_ID=
+FIREBASE_PROJECT_NAME="socialapp"
+FIREBASE_PROJECT_ID="socialapp-XXXXX"
+
+FIREBASE_WEB_APP_API_KEY="AIzaXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXq78WM"
+FIREBASE_WEB_APP_AUTH_DOMAIN="socialapp-XXXXX.firebaseapp.com"
+FIREBASE_WEB_APP_DATABASE_URL="https://socialapp-XXXXX.firebaseio.com"
+FIREBASE_WEB_APP_PROJECT_ID="socialapp-XXXXX"
+FIREBASE_WEB_APP_STORAGE_BUCKET="socialapp-XXXXX.appspot.com"
+FIREBASE_WEB_APP_MESSAGING_SENDER_ID="10XXXXXXXXX89"
+FIREBASE_WEB_APP_APP_ID="1:10XXXXXXXXX89:web:4cXXXXXXXXXXXXXXXXXX78"
+FIREBASE_WEB_APP_MEASUREMENT_ID="G-XXXXXXXXXX"
