--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
