--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.14.5",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
+    "lodash.isempty": "^4.4.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
